Style du header et animation au click

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 	<header class="navigation">
 		<div class="container-navigation">
 			<div class="container-logo">
-				<img src="asset/img/logo-archiwiki.png" srcset="asset/img/logo-archiwiki@2x.png 2x, asset/img/logo-archiwiki.png 1x" alt="Logo de l'entreprise Archi-Wiki">
+				<img class="archi-wiki-logo" src="asset/img/logo-archiwiki.png" srcset="asset/img/logo-archiwiki@2x.png 2x, asset/img/logo-archiwiki.png 1x" alt="Logo de l'entreprise Archi-Wiki">
 				<p class="legend-logo">Partageons la ville, ses bâtiments, ses lieux…</p>
 			</div>
 			<nav class="container-header-nav">
@@ -30,11 +30,11 @@
 			</div>
 			<div class="more-menu">
 				<div class="burger-menu"></div>
-				<p>Menu</p>
+				<p class="show-more-menu">Menu</p>
 			</div>
 		</div>
 		<div class="content-search-nav" aria-labelledby="search-nav-title">
-			<h3 id="search-nav-title">Recherchez à travers nos 11 257 adresses et 61 652 photos :</h3>
+			<h3 class="search-nav-title" id="search-nav-title">Recherchez à travers nos 11 257 adresses et 61 652 photos :</h3>
 			<form>
 				<input type="text" name="adress" placeholder="indiquez une adresse, un nom de rue ou de bâtiment">
 				<button type="sumbit" name="search"><i class="fa fa-search" aria-hidden="true"></i></button>
